feat: add update and download png with grpc-gateway
